<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.gvsu.cis350.reminder.AddEditReminderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="Reminder Name"
                android:text=""
                android:id="@+id/displayReminderName"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:id="@+id/radioGroupRepeat"
                android:checkedButton="@+id/radioButtonOnce">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/displayReminderName"
                    android:orientation="horizontal"
                    android:text="Once"
                    android:id="@+id/radioButtonOnce" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/radioButton"
                    android:text="Yearly"
                    android:id="@+id/radioButtonYearly" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Monthly"
                    android:id="@+id/radioButtonMonthly"
                    android:layout_gravity="center_horizontal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weekly"
                    android:id="@+id/radioButtonWeekly"
                    android:layout_gravity="center_horizontal" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S"
                    android:id="@+id/checkBoxSunday"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"
                    android:id="@+id/checkBoxMonday"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/checkBoxSunday" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="T"
                    android:id="@+id/checkBoxTuesday"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/checkBoxMonday" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="W"
                    android:id="@+id/checkBoxWednesday"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/checkBoxTuesday" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="T"
                    android:id="@+id/checkBoxThursday"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/checkBoxWednesday" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F"
                    android:id="@+id/checkBoxFriday"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/checkBoxThursday" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S"
                    android:id="@+id/checkBoxSaturday"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/checkBoxFriday" />

            </RelativeLayout>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editDatePicker"
                android:datePickerMode="spinner"
                android:spinnersShown="true"
                android:calendarViewShown="false"
                android:layout_gravity="center_horizontal" />

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTimePicker"
                android:timePickerMode="spinner"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editAddressField"
                android:hint="Address" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editNotesField"
                android:layout_gravity="center_horizontal"
                android:inputType="textCapSentences|textLongMessage|textAutoCorrect|textMultiLine"
                android:hint="Enter any notes here." />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/saveEditbutton"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_done"
                android:layout_weight="0.06" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/deleteButton"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_delete"
                android:layout_weight="0.06" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
