<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.gvsu.cis350.reminder.Settings"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Themes"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:columnCount="3"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:id="@+id/gridLayout"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GV Blue"
            android:id="@+id/GVThemeButton"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:background="@color/GVBlue"
            android:layout_gravity="center_horizontal|fill" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flame"
            android:id="@+id/flameThemeButton"
            android:layout_below="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:background="@color/flame_t1"
            android:layout_gravity="center_horizontal|fill" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forest"
            android:id="@+id/forestThemeButton"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:background="@color/t2_primary"
            android:layout_gravity="center_horizontal|fill" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sunrise"
            android:id="@+id/royalThemeButton"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@color/royal_primary"
            android:layout_gravity="center_horizontal|fill"
            android:singleLine="false"
            android:enabled="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Slate"
            android:id="@+id/slateThemeButton"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/Slate_accent"
            android:enabled="true"
            android:elegantTextHeight="false"
            android:clickable="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tie Dye"
            android:id="@+id/tiedyeThemeButton"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:background="@color/td_primary" />

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Settings"
        android:id="@+id/save_settings"
        android:layout_row="24"
        android:layout_column="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
