...

    </android.support.design.widget.AppBarLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@android:id/list"
        android:layout_gravity="top"
        android:layout_weight="0.37"
        android:layout_alignParentStart="true"
        android:background="@color/GVWhite"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/view" />
...
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--/>-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_add"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="27dp"
...
